tests/bigint/invalid12.js
type InvalidNegOctalLegacy = -016432n; // error
